--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.activation.jar=C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\activation.jar
+file.reference.javax.mail-api-1.6.0.jar=C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\javax.mail-api-1.6.0.jar
+file.reference.javax.mail.jar=C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\javax.mail.jar
+file.reference.mail.jar=C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\mail.jar
+file.reference.smtp-1.6.0.jar=C:\\Program Files\\Java\\jre1.8.0_151\\lib\\ext\\smtp-1.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +42,12 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail-api-1.6.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.smtp-1.6.0.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
