--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,14 @@
         <servlet-name>companyReg</servlet-name>
         <servlet-class>companyReg</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>FileUploadDBServlet</servlet-name>
+        <servlet-class>FileUploadDBServlet.FileUploadDBServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>demo</servlet-name>
+        <servlet-class>demo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -31,6 +39,14 @@
     <servlet-mapping>
         <servlet-name>companyReg</servlet-name>
         <url-pattern>/companyReg</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FileUploadDBServlet</servlet-name>
+        <url-pattern>/FileUploadDBServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>demo</servlet-name>
+        <url-pattern>/demo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
